--- a/saf_selector.ipynb
+++ b/saf_selector.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,6 +168,13 @@
    "outputs": [],
    "source": [
     "df = df.loc[df['servicio_id']==364]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Graba el archivo resultante para poder utilizarlo en el dashboard"
    ]
   },
   {
