--- a/saf_selector.ipynb
+++ b/saf_selector.ipynb
@@ -11,16 +11,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('credito-mensual-2020.csv', decimal = ',')"
+    "df = pd.read_csv('credito-mensual-2021.csv', decimal = ',')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -70,27 +70,27 @@
        "    <tr>\n",
        "      <th>Administración Nacional de Aviación Civil</th>\n",
        "      <th>669</th>\n",
-       "      <td>3.068111e+03</td>\n",
+       "      <td>3.195097e+03</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Administración Nacional de Laboratorios e Institutos de Salud Dr. Carlos G. Malbrán</th>\n",
        "      <th>906</th>\n",
-       "      <td>3.037947e+03</td>\n",
+       "      <td>3.803590e+03</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Administración Nacional de Medicamentos, Alimentos y Tecnología Médica</th>\n",
        "      <th>904</th>\n",
-       "      <td>1.771618e+03</td>\n",
+       "      <td>1.944354e+03</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Administración Nacional de la Seguridad Social</th>\n",
        "      <th>850</th>\n",
-       "      <td>3.381730e+06</td>\n",
+       "      <td>3.672460e+06</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Administración de Parques Nacionales</th>\n",
        "      <th>107</th>\n",
-       "      <td>3.035470e+03</td>\n",
+       "      <td>3.329122e+03</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -100,52 +100,52 @@
        "    <tr>\n",
        "      <th>Superintendencia de Servicios de Salud</th>\n",
        "      <th>914</th>\n",
-       "      <td>3.753452e+04</td>\n",
+       "      <td>3.713088e+04</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Teatro Nacional Cervantes</th>\n",
        "      <th>113</th>\n",
-       "      <td>5.053256e+02</td>\n",
+       "      <td>5.671711e+02</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Tribunal Fiscal de la Nación</th>\n",
        "      <th>620</th>\n",
-       "      <td>4.465304e+02</td>\n",
+       "      <td>4.426660e+02</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Tribunal de Tasaciones de la Nación</th>\n",
        "      <th>612</th>\n",
-       "      <td>1.235414e+02</td>\n",
+       "      <td>1.264901e+02</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Unidad de Información Financiera</th>\n",
        "      <th>670</th>\n",
-       "      <td>5.708949e+02</td>\n",
+       "      <td>5.731910e+02</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>127 rows × 1 columns</p>\n",
+       "<p>129 rows × 1 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "                                                                credito_vigente\n",
        "servicio_desc                                      servicio_id                 \n",
-       "Administración Nacional de Aviación Civil          669             3.068111e+03\n",
-       "Administración Nacional de Laboratorios e Insti... 906             3.037947e+03\n",
-       "Administración Nacional de Medicamentos, Alimen... 904             1.771618e+03\n",
-       "Administración Nacional de la Seguridad Social     850             3.381730e+06\n",
-       "Administración de Parques Nacionales               107             3.035470e+03\n",
+       "Administración Nacional de Aviación Civil          669             3.195097e+03\n",
+       "Administración Nacional de Laboratorios e Insti... 906             3.803590e+03\n",
+       "Administración Nacional de Medicamentos, Alimen... 904             1.944354e+03\n",
+       "Administración Nacional de la Seguridad Social     850             3.672460e+06\n",
+       "Administración de Parques Nacionales               107             3.329122e+03\n",
        "...                                                                         ...\n",
-       "Superintendencia de Servicios de Salud             914             3.753452e+04\n",
-       "Teatro Nacional Cervantes                          113             5.053256e+02\n",
-       "Tribunal Fiscal de la Nación                       620             4.465304e+02\n",
-       "Tribunal de Tasaciones de la Nación                612             1.235414e+02\n",
-       "Unidad de Información Financiera                   670             5.708949e+02\n",
+       "Superintendencia de Servicios de Salud             914             3.713088e+04\n",
+       "Teatro Nacional Cervantes                          113             5.671711e+02\n",
+       "Tribunal Fiscal de la Nación                       620             4.426660e+02\n",
+       "Tribunal de Tasaciones de la Nación                612             1.264901e+02\n",
+       "Unidad de Información Financiera                   670             5.731910e+02\n",
        "\n",
-       "[127 rows x 1 columns]"
+       "[129 rows x 1 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,15 +179,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "df.to_csv('base.csv', index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "hide_input": false,
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
